# orc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _orc-config  justfile  orc_helpers.cmake  set_build_version.sh
.github/: generate_job_summary.py  gtest_to_markdown.py  orc_test_to_github_actions.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  tagged-release.yml
examples/function/: alt.cpp  main.cpp
examples/size_t/: main.cpp  one.cpp  two.cpp
examples/typedef/: alt.cpp  main.cpp
examples/vtable/: main.cpp  object.cpp  object.hpp  one.cpp  two.cpp
include/orc/: allocator.hpp  ar.hpp  async.hpp  dwarf.hpp  dwarf_constants.hpp  dwarf_structs.hpp  fat.hpp  features.hpp  fixed_vector.hpp  freader.hpp  hash.hpp  mach_types.hpp  macho.hpp  memory.hpp  object_file_registry.hpp  orc.hpp  parse_file.hpp  semantic_type.hpp  settings.hpp  str.hpp  string.hpp  string_pool.hpp  task_system.hpp  tracy.hpp  vector.hpp  version.hpp
src/: allocator.cpp  ar.cpp  async.cpp  dwarf.cpp  dwarf_constants.cpp  dwarf_structs.cpp  fat.cpp  hash.cpp  macho.cpp  main.cpp  object_file_registry.cpp  orc.cpp  parse_file.cpp  settings.cpp  str.cpp  string_pool.cpp  tracy.cpp
test/battery/accessibility/: odrv_test.toml  src.cpp
test/battery/byte_size/: odrv_test.toml  one.cpp  two.cpp
test/battery/calling_convention/: odrv_test.toml  src.cpp
test/battery/class_struct/: class.cpp  odrv_test.toml  struct.cpp
test/battery/data_member_location/: odrv_test.toml  src.cpp
test/battery/inline_attribute/: inline.cpp  odrv_test.toml
test/battery/static_free_functions/: odrv_test.toml  src.cpp
test/battery/typedef_anonymous_struct/: a.cpp  b.cpp  odrv_test.toml
test/battery/typedef_struct/: odrv_test.toml  src.cpp
test/battery/virtuality/: odrv_test.toml  src.cpp
test/battery/vtable/: odrv_test.toml  two.cpp
test/battery/vtable_elem_location/: odrv_test.toml  one.cpp  src.cpp
test/src/: fixed_vector_tests.cpp  main.cpp
